	option).  Part of the text is replaced with ellipsis to keep both start
	and end visible.  Patch by Vadim Curcă.

	Added escape() builtin function to escape specific characters in strings.
	Thanks to The Cyberduck.

	Added :wingo command to navigate to a view by substring matching against
	its title or path.  Thanks to iSeeU816 and Alexandre Viau.

	Don't draw right padding on a truncated rightmost column of a transposed
	ls-like view.

	Made register's content being listed in normal rather then reversed order
	in :registers/:display menu.

	Don't even try to clear graphics when menu-like mode is active.  The
	graphics should have been hidden on entering the mode.

	Allowed wild menu popup to take up up to 40% of the screen.

	Made documentation of 'vifminfo' more readable.

	Rewrote "Menus and dialogs" part of the documentation.

	Increase line length limit used during formatting output of :highlight
	command to allow longer strings.

	Display number of color pairs in use to :version/:vifm menu.

	Don't show a message at the end of 'incsearch' if the cursor was moved not
	by the search.  Patch by filterfalse.

	Clarify documentation on column literals and escaping.  Thanks to
	chelovechishko.

	Allow and skip !/!! prefix of custom external :commands for more
	macros (%S, %q, %i, %m, %M, %s, %v, %u, %U, %Iu, %IU).

	Slightly expand documentation on %N macro.  Thanks to James Dietrich.

	Made Tab and Shift-Tab in interactive search prompts (including when
	navigating) move cursor to next/previous search match.  Thanks to
	David Sierra DiazGranados (a.k.a. davidsierradz).

	Somewhat improve documentation on functional keys.

	Updated autotools scripts.  Thanks to phanium (a.k.a. phanen).

	Perform sorting of completion items after doing Unicode normalization.

	Perform sorting of file names after doing Unicode normalization.  Thanks
	to hacksenwerk.

	Make :compare treat non-regular files (pipes, sockets, etc.) as empty.
