@@ -31,6 +31,7 @@ enum
 	COM_AUTOCMD,
 	COM_BMARKS,
 	COM_CABBR,
+	COM_CALL,
 	COM_CD,
 	COM_CHOWN,
 	COM_CLONE,
